# PantryMatch2.0

./: .gitignore  .vercelignore  README.md  backend.md  backend_overview.md  frontend.md
backend/: .vercelignore  app.py  build_cache.py  config.example.py  convert_to_onnx.py  generate_final_report.py  main.py  ml_infer_ingredients.py  ml_train_ingredients_model_5fold_cv_enhanced.py  procfile  pyproject.toml  requirements.txt  simple_tfidf.py  vercel.json
backend/data/: recipe_classifications.csv  users.db
backend/models/: class_names.json  enhanced_5fold_metrics.json  enhanced_5fold_report.txt  ingredients_classes.txt
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: DetectedIngredients.jsx  EmptyState.jsx  Header.jsx  ImageUploadSection.jsx  LoginPage.jsx  ProfilePage.jsx  RecipeCard.jsx  RecipeList.jsx  SearchBox.jsx  SignupPage.jsx  Toast.jsx
frontend/src/components/ImageUpload/: MultiImageUpload.jsx  SingleImageUpload.jsx
frontend/src/components/RecipeModal/: ModalHeader.jsx  RecipeModal.jsx
frontend/src/services/: api.js
