
[project]
name = "pantry-match-api"
version = "2.0.0"
description = "PantryMatch 2.0 – Flask backend for ingredient-based recipe search and ML image inference"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "flask==3.0.2",
    "flask-cors==4.0.0",
    "numpy==1.26.4",
    "scikit-learn==1.4.1.post1",
    "onnxruntime==1.17.1",
    "pillow==10.3.0",
    "requests==2.31.0",
    "itsdangerous==2.2.0",
    "pymongo==4.6.3",
]
